[package]
name = "orbits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]
[dev-dependencies]
wasm-bindgen-test = "0.2"

[dependencies]
rand = "0.8" 
rand_distr = "*" 
bevy = "0.13.0"
